Cacti CHANGELOG

1.1.38
-issue#1501: cmd.php poller not stripping alpha from snmp get values
-issue#1515: Special characters not rendered properly in settings
-issue#1537: Numeric validation not ignoring blank elements

1.1.37
-issue#274: Allow Realtime Graph Popup Mode
-issue#1405: When Data Query columns are wide, they cause rendering issues
-issue#1414: DSSTATS reports incorrectly that a data source does not exist
-issue#1419: Filtering log results in errors in the log
-issue#1420: PHP NOTICE editing cdef and vdef items
-issue#1421: CLI upgrade_database.php PHP Warning on execution
-issue#1426: Remote poller erroring attempting to verify files
-issue#1432: Delete confirmation does not disappear
-issue#1443: Partial Save warnings under Settings -> Mail/Reporting/DNS
-issue#1447: CLI audit_database.php not detecting database name, and failed to create audit tables when run fresh
-issue#1453: CLI add_graph.php not allowing title to be set
-issue#1456: Increase minimum php version maintaining support for RHEL6
-issue#1457: Path-Based Cross-Site Scripting (XSS) issues
-issue#1458: Error in logs when creating new graphs
-issue#1459: Automation filter not applied correctly
-issue#1461: Setting output_format on input type causes no values to be returned
-issue#1464: Poller stuck in infinitely loop causing excess logging
-issue#1466: No scrollbars in mobile browsers
-issue#1468: Increase max length of host.snmp_sysObjectID column
-issue#1471: Undefined function found in global_languages.php
-issue#1472: Change Device Options - Style needs updating
-issue#1474: Check possibility for creation of temporary tables on install
-issue#1487: Undefined constant in ldap.php
-issue#1483: Create New Graphs - Paw Styling Issue
-issue#1493: Can't create tree branches with '#' sign
-feature#1489: Add ability to use parts of OID as value via regex
-feature: Updated Chinese Simplified translations
-feature: Updated Dutch translations
-feature: JavaScript library Chart.js updated 2.7.2 