@@ -216,9 +216,21 @@ $messages = array(
 	35 => array(
 		'message' => __('Some settings not saved. Check messages below.  Check red fields for errors.'),
 		'type' => 'error'),
-	36  => array(
+	36 => array(
 		'message' => __('The file highlighted does not exist.  Please enter a valid file name.'),
 		'type' => 'error'),
+	37 => array(
+		'message' => __('All User Settings have been returned to their default values.'),
+		'type' => 'info'),
+	38 => array(
+		'message' => __('Suggested Field Name was not entered.  Please enter a field name and try again.'),
+		'type' => 'error'),
+	39 => array(
+		'message' => __('Suggested Value was not entered.  Please enter a suggested value and try again.'),
+		'type' => 'error'),
+	'field_input_dupe' => array(
+		'message' => __('The input field was previously used but has been saved'),
+		'type' => 'info'),
 	'clog_invalid' => array(
 		'message' => __('Log file specified is not a Cacti log or archive file.'),
 		'type' => 'info'),
