@@ -3,6 +3,7 @@ Cacti CHANGELOG
 1.1.38
 -issue#1501: cmd.php poller not stripping alpha from snmp get values
 -issue#1515: Special characters not rendered properly in settings
+-issue#1530: Inconsistent behaviour handling blank Field Name/Value when editing data query suggested values
 -issue#1537: Numeric validation not ignoring blank elements
 
 1.1.37
